--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "install-dynamodb-local": "serverless dynamodb install",
     "start-dynamodb-local": "serverless dynamodb start --migrate",
     "start-gateway-local": "serverless offline",
+    "start-local": "concurrently \"yarn start-dynamodb-local\" \"yarn start-gateway-local\"",
     "load-data-local": "RUN_LOCAL=true node data-loader.js"
   },
   "repository": {
@@ -26,6 +27,7 @@
   },
   "homepage": "https://github.com/tacallaway/lichen#readme",
   "devDependencies": {
+    "concurrently": "^5.1.0",
     "serverless": "^1.66.0",
     "serverless-dynamodb-local": "^0.2.39",
     "serverless-offline": "^5.12.1"
