--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,15 @@
   "configurations": [
     {
       "type": "node",
+      "request": "attach",
+      "name": "Attach to Serverless Offline",
+      "port": 9229,
+      "skipFiles": [
+        "<node_internals>/**"
+      ]
+    },
+    {
+      "type": "node",
       "request": "launch",
       "name": "Load Sites",
       "program": "${workspaceFolder}/data-loader.js",
